--- a/app/styles/components/_gradient-dial.scss
+++ b/app/styles/components/_gradient-dial.scss
@@ -1,5 +1,12 @@
-.gradient-dial {
-  border: 1px solid grey;
+.gradient-dial:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 0.075em solid rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .gradient-dial .gradient-dial__handle--size {
